Fixes alignment issue in pool listing
Bug-Url: https://bugzilla.redhat.com/1347844

--- a/app/styles/storage-list-view.scss
+++ b/app/styles/storage-list-view.scss
@@ -8,7 +8,16 @@
         padding-top: 5px;
     }
     .pool-name-box{
-        width:200px;
+        width:180px;
         text-overflow:ellipsis;
+    }
+    .wrap-break-line{
+        display: inline-block;
+        word-break: break-all;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+    .size-wrap{
+        width:100px;
     }
 }
